Alterações feitas na tela de login e cadastro

--- a/public/cadastro.html
+++ b/public/cadastro.html
@@ -15,7 +15,17 @@
     <div id="main">
         <div id="container" class="bordaPixel">
             <h2 class="gradienteTexto negrito titulos">CADASTRO</h2>
-            <div id="inputGroup">
+            <div id="inputFolder">
+
+                <div id="lableGroup">
+                    <h5 class="gradienteTexto">NICKNAME</h5>
+                    <h5 class="gradienteTexto">PRIMEIRO NOME</5>
+                    <h5 class="gradienteTexto">EMAIL</h5>
+                    <h5 class="gradienteTexto">SENHA</h5>
+                    <h5 class="gradienteTexto">CONFIRMAR SENHA</h5> 
+                </div>
+
+                <div id="inputGroup">
                 
                 <audio autoplay loop src="assets/songs/cadastro.mp3"></audio>
                 <input type="text" class="bordaPixel" placeholder="Nickname">
@@ -25,6 +35,9 @@
                 <input type="password" class="bordaPixel" placeholder="Confirme a senha">
 
             </div>
+
+            </div>
+
             
             <button id="btCadastro" class="bordaPixel ">Cadastrar</button>
         </div>
