--- a/public/cadastro.html
+++ b/public/cadastro.html
@@ -157,30 +157,25 @@
         emailServer: emailVar,
         senhaServer: senhaVar,
         idEmpresaVincularServer: idEmpresaVincular
-      }),
+      })
     })
-      .then(function (resposta) {
-        console.log("resposta: ", resposta);
+      .then(function (res) {
+        console.log("resposta: ", res);
 
-        if (resposta.ok) {
-          cardErro.style.display = "block";
-
-          mensagem_erro.innerHTML =
-            "Cadastro realizado com sucesso! Redirecionando para tela de Login...";
+        if (res.ok) {
+          Alert("Cadastro realizado com sucesso! Redirecionando para tela de Login...")   
 
           setTimeout(() => {
             window.location = "login.html";
           }, "2000");
-
           limparFormulario();
-          finalizarAguardar();
+
         } else {
           throw "Houve um erro ao tentar realizar o cadastro!";
         }
       })
-      .catch(function (resposta) {
-        console.log(`#ERRO: ${resposta}`);
-        finalizarAguardar();
+      .catch(function (res) {
+        console.log(`#ERRO: ${res}`);
       });
 
     return false;
