Alterações no Cadastro e Login, seguindo o Web-Data-Viz

--- a/public/meucadastro.html
+++ b/public/meucadastro.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Realidade - Cadastro </title>
-    <link rel="stylesheet" href="./css/cadastro.css">
+    <link rel="stylesheet" href="./css/cadastroLogin.css">
     <link rel="stylesheet" href="./css/geral.css">
     <script src="./js/sessao.js"></script>
 
@@ -16,7 +16,7 @@
 
     <div id="main">
         <div id="container" class="bordaPixel">
-            <h2 class="gradienteTexto negrito titulos">CADASTRO</h2>
+            <h2 class="gradienteTexto negrito titulos" style="padding-top: 20px;">CADASTRO</h2>
             <div id="inputFolder">
 
                 <div id="lableGroup">
@@ -29,7 +29,6 @@
 
                 <div id="inputGroup">
                 
-                <audio autoplay loop src="assets/songs/cadastro.mp3"></audio>
                 <input type="text" class="bordaPixel" id="iptNick" placeholder="Nickname">
                 <input type="text" class="bordaPixel" id="iptNome" placeholder="Primeiro Nome">
                 <input type="text" class="bordaPixel" id="iptEmail" placeholder="Email">
