--- a/public/login.html
+++ b/public/login.html
@@ -123,9 +123,10 @@
                 resposta.json().then(json => {
                     console.log(json);
                     console.log(JSON.stringify(json));
-                    sessionStorage.NICK_USUARIO = json.email;
+                    sessionStorage.NICK_USUARIO = json.nick;
+                    sessionStorage.EMAIL_USUARIO = json.email;
                     sessionStorage.NOME_USUARIO = json.nome;
-                    sessionStorage.ID_USUARIO = json.id;
+                    sessionStorage.ID_USUARIO = json.idusuario;
                     window.location = "./dashboard/cards.html";
                 });
 
