--- a/public/meulogin.html
+++ b/public/meulogin.html
@@ -79,7 +79,7 @@
                     sessionStorage.NOME_USUARIO = json.nome;
                     sessionStorage.EMAIL_USUARIO = json.email;
                     sessionStorage.ID_USUARIO = json.id;
-                    window.location = "./dashboard/cards.html";
+                    window.location = "apartamento.html";
                 });
 
             } else {
