--- a/public/meucadastro.html
+++ b/public/meucadastro.html
@@ -91,7 +91,7 @@
           alert("Cadastro realizado com sucesso! Redirecionando para tela de Login...")   
 
           setTimeout(() => {
-            window.location = "login.html";
+            window.location = "meulogin.html";
           }, "1000");
 
         } else {
