comećando a logica da dashboard primeiramente capturando os segredos encontrados

--- a/public/login.html
+++ b/public/login.html
@@ -127,7 +127,7 @@
                     sessionStorage.EMAIL_USUARIO = json.email;
                     sessionStorage.NOME_USUARIO = json.nome;
                     sessionStorage.ID_USUARIO = json.idusuario;
-                    window.location = "apartamento.html";
+                    window.location = "../dashboard/cards.html";
                 });
 
             } else {
