--- a/public/apartamento.html
+++ b/public/apartamento.html
@@ -67,7 +67,7 @@
     const paginas = [
         { idpagina: 0, nome: "Apartamento" },
         { idpagina: 1, nome: "Predio" },
-        { idpagina: 2, nome: "Biblioteca" },
+        { idpagina: 2, nome: "livraria" },
         { idpagina: 3, nome: "Engrenagens" },
         { idpagina: 4, nome: "Floresta" }
     ];
